update map and bloom